# episteme-fable

./: .gitignore  README.md  SCHEMA.md  pyproject.toml
bench/: BASELINE-v2.md
gold/: GOLD.md
gold/docs/: arxiv-attention.md  arxiv-deepseek.md  arxiv-gw150914.md  blog-progress.md  essay-free-discussion.md  essay-induction.md  essay-peer-review.md  essay-specialization.md  forum-nuclear.md  forum-remote.md  news-chips.md  news-fusion.md
gold/labels/: arxiv-attention.json  arxiv-deepseek.json  arxiv-gw150914.json  blog-progress.json  essay-free-discussion.json  essay-induction.json  essay-peer-review.json  essay-specialization.json  forum-nuclear.json  forum-remote.json  news-chips.json  news-fusion.json
prompts/: point_v1.md  propose_v1.md  propose_v2.md  thesis_v1.md
src/episteme_fable/: __init__.py  assemble.py  bench.py  cli.py  context.py  identify.py  ingest.py  pipeline.py  propose.py  providers.py  report.py  schemas.py  segment.py  store.py  validate.py
tests/: test_identify.py  test_pipeline_mock.py  test_providers.py  test_segment.py  test_validate.py
