[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "episteme-fable"
version = "0.1.0"
description = "Episteme (Fable): text -> self-contained propositions (Aussagen) -> points -> theses. LLM proposes, calculus disposes."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
epf = "episteme_fable.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
